Update index.html and added email

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                   <ul class="contact-details">
                     <li><span>INU, Hayatabad</span></li>
                     <li><span>Peshawar, Khyber Pakhtunkhwa</span></li>
-                    <li><span>example@example.com</span></li>
+                    <li><span>hareemmajid17@gmail.com</span></li>
                   </ul>
                 </div>
               </div>
