--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@
 
           <ul class="list-unstyled list-social">
             <li>
+              <a href="https://www.instagram.com/hareemmajidd?igsh=MWphcjZsYzdxeWlxOA=="><i class="bi bi-instagram"></i></a>
+            </li>
+            <li>
               <a href="https://pin.it/3zLlSiT37"><i class="bi bi-pinterest"></i></a>
             </li>
             <li>
               <a href="https://www.tiktok.com/@hareemmajidd?_t=8licg3AVKOV&_r=1"><i class="bi bi-tiktok"></i></a>
             </li>
-            <li>
-              <a href="https://www.instagram.com/hareemmajidd?igsh=MWphcjZsYzdxeWlxOA=="><i class="bi bi-instagram"></i></a>
-            </li>
+            
           </ul>
         </div>
       </div>
@@ -411,13 +412,13 @@
         <div class="socials-media text-center">
           <ul class="list-unstyled">
             <li>
-              <a href="#"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/hareemmajidd?igsh=MWphcjZsYzdxeWlxOA=="><i class="bi bi-instagram"></i></a>
             </li>
             <li>
-              <a href="#"><i class="bi bi-tiktok"></i></a>
+              <a href="https://www.tiktok.com/@hareemmajidd?_t=8licg3AVKOV&_r=1"><i class="bi bi-tiktok"></i></a>
             </li>
             <li>
-              <a href="#"><i class="bi bi-pinterest"></i></a>
+              <a href="https://pin.it/3zLlSiT37"><i class="bi bi-pinterest"></i></a>
             </li>
            
           </ul>
